tests/miniJava/neg/005645_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class public java { }
